2009-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs, SecurityHandler.cs,
	  InputOrReplyRequestProcessor.cs, MessageProcessingContext.cs :
	  remove default communication timeouts from several types. They
	  bring bogus NRE. Instead, fill timeouts in ChannelDispatcher and
	  use it when required (it was actually *only* request processor).

2009-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : wrong channel argument.

2009-04-27  Atsushi Enomoto  <atsushi@ximian.com>

	* DispatchRuntime.cs : some comment.
	* ChannelDispatcher.cs : ongoing changes to handle listeners and
	  accepted channels at more precise state. Listeners are opened,
	  without accepting channels. Some setup code is done at OnOpen(),
	  while some are done at OnOpened().

2009-04-23  Atsushi Enomoto  <atsushi@ximian.com>

	* DispatchOperation.cs : implement GetFormatter() at service side too.

2009-04-01  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokeHandler.cs : replace MS copycat exception message.

2009-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntime.cs : fill contractType in .ctor().

2009-02-04  Atsushi Enomoto  <atsushi@ximian.com>

	* BaseMessagesFormatter.cs : do not use non-2.1 CreateInstance().

2008-06-18  Noam Lampert <noaml@mainsoft.com>

	* ChannelDispatcher.cs: Avoid aborting host process on faulty input message.

2008-05-22  Noam Lampert <noaml@mainsoft.com>

	* OperationInvokeHandler.cs: Only return fault reply when TargetInvocation occured (not other internal
	  errors. Serlialize the correct (inner) exception.
	  
2008-05-22  Roei Erez  <roeie@mainsoft.com>
	* fix ContractDescription.GetContract implementation
	* Refactor Request processing
	* Add support for message inspectors
	* Add support for InstanceContextProvider & InstanceProvider, including lifecycles events
	like: ReleaseServiceInstance, Open, Close...
	* Add relevant test cases.

2008-05-01  Eyal Alaluf <eyala@mainsoft.com>
