@@ -8,10 +8,20 @@ namespace System.ServiceModel.Dispatcher
 {
 	internal class ReplyHandler : BaseRequestProcessorHandler
 	{
+		IDuplexChannel duplex;
+
+		public ReplyHandler (IChannel channel)
+		{
+			duplex = channel as IDuplexChannel;
+		}
+
 		protected override bool ProcessRequest (MessageProcessingContext mrc)
-		{			
-			mrc.Reply (true);
-			return false;			
+		{
+			if (duplex != null)
+				mrc.Reply (duplex, true);
+			else
+				mrc.Reply (true);
+			return false;
 		}
 	}
 }
